New way for restarting